<resources>
    <string name="app_id">201275219971584</string>
    <string name="app_name">Delectable</string>
    <string name="action_settings">Settings</string>
    <string name="terms_url">https://delectable.com/terms</string>
    <string name="facebook_text">Facebook</string>
    <string name="twitter_text">Twitter</string>
    <string name="instagram_text">Instagram</string>
    <string name="make_private">Make private</string>
    <string name="flash_on">ON</string>
    <string name="flash_off">OFF</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="ok">ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="share">Share</string>
    <string name="dialog_edit">Edit</string>
    <string name="invite_body">Join me on Delectable! The best way to save, share and discover wine.\nhttps://www.delectable.com/invite</string>
    <string name="error_facebook_connect_failed">Failed to connect to Facebook</string>
    <string name="error_no_instagram">In order to post to instagram, you must have it installed on your device</string>
    <string name="error_connect_facebook">In order to post to facebook, you must connect it to Delectable</string>
    <string name="error_connect_twitter">In order to post to twitter, you must connect it to Delectable</string>
    <string name="error_invalid_username_password">Invalid Email and/or Password.</string>
    <string name="error_no_email_client">There is no email client installed</string>
    <string name="error_sms_failed">SMS failed</string>
    <string name="error_capture_no_network">Failed to capture.  Please make sure you are connected to the internet.</string>
    <string name="version_upgrade_your_app_out_of_date">Your app is out of date, download the new one!</string>
    <string name="version_upgrade_upgrade">upgrade</string>
    <string name="title_activity_login">Sign in</string>
    <string name="landing_join_delectable">join delectable</string>
    <string name="login_already_have_account">Already have an account?&#160;</string>
    <string name="login_login">Sign in</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sign_in_title">Sign in</string>
    <string name="signup_in_done">done</string>
    <string name="signup_in_name_label">name</string>
    <string name="signup_in_name_hint">First and last</string>
    <string name="signup_in_email_address_label">email address</string>
    <string name="signup_in_email_address_hint">hello@email.com</string>
    <string name="signup_in_password_label">password</string>
    <string name="signup_in_forgot">Forgot?</string>
    <string name="signup_in_or">or</string>
    <string name="signup_in_sign_in_using_facebook">sign in using facebook</string>
    <string name="signup_in_sign_in_using_google">sign in using google</string>
    <string name="signup_in_sign_up_using_facebook">sign up using facebook</string>
    <string name="signup_in_sign_up_using_google">sign up using google</string>
    <string name="signup_in_agree_to">By signing up you agree to Delectable\'s&#160;</string>
    <string name="signup_in_terms_of_use">Terms of Use</string>
    <string name="reset_password_dialog_title">Reset your password?</string>
    <string name="reset_password_dialog_email_hint">Enter your email address</string>
    <string name="reset_password_dialog_reset_password">reset password</string>
    <string name="reset_password_dialog_invalid_email">Please enter a valid email address</string>
    <string name="reset_password_dialog_msg_success">We have sent instructions on how to reset your password to %1$s</string>
    <string name="reset_password_dialog_msg_failed">We could not reset the password for %1$s</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_item_discover">discover</string>
    <string name="navigation_item_your_wines">your wines</string>
    <string name="navigation_your_wines">Your Wines</string>
    <string name="navigation_item_find_friends">find friends</string>
    <string name="navigation_find_friends">Find Friends</string>
    <string name="navigation_item_settings">settings</string>
    <string name="navigation_settings">Settings</string>
    <string name="empty_following_feed">See what friends and experts are drinking by following their updates.</string>
    <string name="empty_following_feed_button">follow friends &amp; experts</string>
    <string name="empty_trending_feed">An internet connection is required to see trending wines.</string>
    <string name="empty_feed">An internet connection is required to see feeds.</string>
    <string name="empty_experts">Seems like there\'s a problem connecting</string>
    <string name="empty_facebook">Connect your account to Facebook. We never spam anyone.</string>
    <string name="connect_facebook_button">connect to facebook</string>
    <string name="empty_twitter">Connect your account to Twitter. We never spam anyone.</string>
    <string name="connect_twitter_button">connect to twitter</string>
    <string name="empty_search_wines">No wines with that name</string>
    <string name="empty_search_hashtags">No hashtags with that name</string>
    <string name="empty_search_people">No people with that name</string>
    <string name="empty_tag_people">@string/empty_facebook</string>
    <string name="empty_wine_profile">No tasting notes yet.</string>
    <string name="empty_own_profile">You have not scanned any wines yet. Tap the camera button to get started.</string>
    <string name="empty_user_profile">%1$s has not scanned any wines yet.</string>
    <string name="home_tab_following">following</string>
    <string name="home_tab_trending">trending</string>
    <string name="action_facebook_login">Facebook Login</string>
    <string name="profile_followers">followers</string>
    <string name="profile_following">following</string>
    <string name="profile_find_people">Find People</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_following_cap">Following</string>
    <string name="with">with</string>
    <string name="following_count">%d following</string>
    <plurals name="wine_count">
        <item quantity="one">1 wine</item>
        <item quantity="other">%d wines</item>
    </plurals>
    <plurals name="followers_count">
        <item quantity="one">1 follower</item>
        <item quantity="other">%d followers</item>
    </plurals>
    <plurals name="with_friends">
        <item quantity="one">with 1 friend</item>
        <item quantity="other">with %d friends</item>
    </plurals>
    <string name="profile_tab_recent">recent</string>
    <string name="profile_tab_top_rated">top rated</string>
    <string name="user_captures_id_in_progress">identification in progress</string>
    <string name="user_captures_check_back">Check back in a few minutes</string>
    <plurals name="likes_count">
        <item quantity="one">1 like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <plurals name="comments_count">
        <item quantity="one">1 comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="you">you</string>
    <plurals name="with_xx_friends_zz_time_ago">
        
        <item quantity="one">with %1$d friend %2$s</item>
        <item quantity="other">with %1$d friends %2$s</item>
    </plurals>
    <string name="at_yy_place_zz_time_ago">at %1$s %2$s</string>
    <plurals name="with_xx_friends_at_yy_place_zz_time_ago">
        <item quantity="one">with %1$d friend at %2$s %3$s</item>
        <item quantity="other">with %1$d friends at %2$s %3$s</item>
    </plurals>
    <string name="capturer_tagged_user_zz_time_ago">%1$s tagged %2$s %3$s</string>
    <plurals name="capturer_tagged_user_and_xx_friends_zz_time_ago">
        <item quantity="one">%1$s tagged %2$s and %3$d friend %4$s</item>
        <item quantity="other">%1$s tagged %2$s and %3$d friends %4$s</item>
    </plurals>
    <string name="capturer_tagged_user_at_yy_place_zz_time_ago">%1$s tagged %2$s at %3$s %4$s</string>
    <plurals name="capturer_tagged_user_and_xx_friends_at_yy_place_zz_time_ago">
        <item quantity="one">%1$s tagged %2$s and %3$d friend at %4$s %5$s</item>
        <item quantity="other">%1$s tagged %2$s and %3$d friends at %4$s %5$s</item>
    </plurals>
    <string name="remove_this_wine_from_your_list">Remove this wine from your list?</string>
    <string name="minimal_capture_remove">remove</string>
    <string name="minimal_capture_add_rating">add your rating</string>
    <string name="followers_title">Followers</string>
    <string name="followers_no_followers">Looks like there are no followers.</string>
    <string name="following_title">Following</string>
    <string name="following_not_following_anyone">Looks like no one\'s getting followed.</string>
    <plurals name="cap_feed_tagged_count">
        <item quantity="one">%1$d person shared this with %2$s</item>
        <item quantity="other">%1$d people shared this with %2$s</item>
    </plurals>
    <plurals name="cap_feed_likes_count">
        <item quantity="one">1 like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <plurals name="cap_feed_likes_text">
        <item quantity="one">1 person likes this</item>
        <item quantity="other">%d people like this</item>
    </plurals>
    <string name="cap_feed_divider">•</string>
    <plurals name="cap_feed_comments_count">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="cap_feed_add_rating">Tap to add your rating</string>
    <string name="cap_feed_add_your_rating">Add your rating</string>
    <string name="cap_feed_at_location">at %s</string>
    <string name="cap_feed_at_location_time">— at %1$s %2$s</string>
    <string name="cap_feed_at_time">— added %s</string>
    <string name="cap_feed_no_comment">At %1$s %2$s</string>
    <string name="cap_feed_no_comment_no_location">Added %s</string>
    <string name="dialog_rating_notforme">NOT FOR ME</string>
    <string name="dialog_rating_loveit">LOVE IT</string>
    <string name="capture_submit_leave_comment_hint">Write a comment or tasting note...</string>
    <string name="capture_submit_drinking_where_text">Where are you drinking?</string>
    <string name="capture_submit_drinking_with_who_text">Who are you drinking with?</string>
    <string name="settings_name_hint">Name</string>
    <string name="settings_short_bio_hint">Short bio</string>
    <string name="settings_website_hint">Website</string>
    <string name="settings_account">account</string>
    <string name="settings_email_label">Email</string>
    <string name="settings_email_hint">hello@delectable.com</string>
    <string name="settings_phone_number_label">Phone number</string>
    <string name="settings_phone_number_hint">Enter phone number</string>
    <string name="settings_facebook_label">Facebook</string>
    <string name="settings_facebook_connect">Connect</string>
    <string name="settings_twitter_label">Twitter</string>
    <string name="settings_twitter_hint">\@twitter</string>
    <string name="settings_about">about</string>
    <string name="settings_terms_of_use">Terms of use</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_sign_out">Sign out</string>
    <string name="over21dialog_title">Are you over 21 years old?</string>
    <string name="over21dialog_note">Please note that someone 21 years or older may need to sign for delivery.</string>
    <string name="over21dialog_over21">I am 21 years or older</string>
    <string name="over21dialog_under21">I am younger than 21</string>
</resources>