<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Comment And Rating -->

        <com.delectable.mobile.ui.common.widget.FontEditText
            android:id="@+id/comment_edit_text"
            style="@style/CommentEditText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/capture_submit_margins"
            android:layout_marginBottom="20dp"
            android:gravity="top"
            android:hint="@string/capture_submit_leave_comment_hint" />

        <com.delectable.mobile.ui.common.widget.NumericRatingSeekBar
            android:id="@+id/score_rate_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_below="@+id/comment_edit_text"
            android:layout_marginLeft="@dimen/capture_submit_margins"
            android:layout_marginRight="@dimen/capture_submit_margins" />


        <!-- More options -->

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/drinking_with_who"
            style="@style/WineCaptureFlow_optionsLabel"
            android:layout_below="@id/score_rate_seek_bar"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_bottom_border"
            android:text="@string/capture_submit_drinking_with_who_text" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/drinking_where"
            style="@style/WineCaptureFlow_optionsLabel"
            android:layout_below="@+id/drinking_with_who"
            android:layout_marginBottom="40dp"
            android:text="@string/capture_submit_drinking_where_text" />

        <com.delectable.mobile.ui.common.widget.FontSwitch
            android:id="@+id/make_private"
            style="@style/WineCaptureFlow_switch"
            android:layout_below="@id/drinking_where"
            android:checked="false"
            app:showText="false"
            android:text="@string/make_private" />

        <com.delectable.mobile.ui.common.widget.FontSwitch
            android:id="@+id/share_facebook"
            style="@style/WineCaptureFlow_switch"
            android:layout_below="@id/make_private"
            app:showText="false"
            android:text="@string/facebook_text" />

        <com.delectable.mobile.ui.common.widget.FontSwitch
            android:id="@+id/share_twitter"
            style="@style/WineCaptureFlow_switch"
            android:layout_below="@id/share_facebook"
            app:showText="false"
            android:text="@string/twitter_text" />

        <com.delectable.mobile.ui.common.widget.FontSwitch
            android:id="@+id/share_instagram"
            style="@style/WineCaptureFlow_switch"
            android:layout_below="@id/share_twitter"
            app:showText="false"
            android:text="@string/instagram_text" />

    </RelativeLayout>

</ScrollView>