<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/d_white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/settings_view_horizontal_padding"
        android:paddingTop="@dimen/settings_view_horizontal_padding">


        <com.delectable.mobile.ui.common.widget.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/settings_profile_image_height"
            android:layout_height="@dimen/settings_profile_image_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/settings_view_horizontal_padding"
            android:src="@drawable/no_photo" />

        <com.delectable.mobile.ui.common.widget.FontEditText
            android:id="@+id/name"
            style="@style/SettingsEditText"
            android:hint="@string/settings_name_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:text="Arnold Fishhorse" />

        <com.delectable.mobile.ui.common.widget.FontEditText
            android:id="@+id/short_bio"
            style="@style/SettingsEditText"
            android:hint="@string/settings_short_bio_hint"
            android:imeOptions="actionDone" />

        <com.delectable.mobile.ui.common.widget.FontEditText
            android:id="@+id/website"
            style="@style/SettingsEditText"
            android:hint="@string/settings_website_hint"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/account_category_label"
            style="@style/SettingsCategoryLabel"
            android:text="@string/settings_account" />

        <RelativeLayout style="@style/SettingsRow">

            <com.delectable.mobile.ui.common.widget.FontTextView
                android:id="@+id/email_label"
                style="@style/SettingsRowTextLabel"
                android:text="@string/settings_email_label" />

            <com.delectable.mobile.ui.common.widget.FontEditText
                android:id="@+id/email_value"
                style="@style/SettingsRowEditText"
                android:layout_toRightOf="@+id/email_label"
                android:hint="@string/settings_email_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />
        </RelativeLayout>

        <RelativeLayout style="@style/SettingsRow">

            <com.delectable.mobile.ui.common.widget.FontTextView
                android:id="@+id/phone_number_label"
                style="@style/SettingsRowTextLabel"
                android:text="@string/settings_phone_number_label" />

            <com.delectable.mobile.ui.common.widget.FontEditText
                android:id="@+id/phone_number_value"
                style="@style/SettingsRowEditText"
                android:layout_toRightOf="@+id/phone_number_label"
                android:hint="@string/settings_phone_number_hint"
                android:imeOptions="actionDone"
                android:inputType="phone" />
        </RelativeLayout>

        <RelativeLayout style="@style/SettingsRow">

            <com.delectable.mobile.ui.common.widget.FontTextView
                android:id="@+id/facebook_label"
                style="@style/SettingsRowTextLabel"
                android:text="@string/settings_facebook_label" />

            <com.facebook.widget.LoginButton
                android:id="@+id/facebook_sign_in"
                style="@style/SettingsRowEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <com.delectable.mobile.ui.common.widget.FontTextView
                android:id="@+id/facebook_value"
                style="@style/SettingsRowEditText"
                android:textColor="@color/text_dark_gray_to_blue"
                android:text="@string/settings_facebook_connect" />
        </RelativeLayout>

        <RelativeLayout style="@style/SettingsRow">

            <com.delectable.mobile.ui.common.widget.FontTextView
                android:id="@+id/twitter_label"
                style="@style/SettingsRowTextLabel"
                android:text="@string/settings_twitter_label" />

            <com.delectable.mobile.ui.common.widget.FontEditText
                android:id="@+id/twitter_value"
                style="@style/SettingsRowEditText"
                android:layout_toRightOf="@+id/twitter_label"
                android:hint="@string/settings_twitter_hint" />
        </RelativeLayout>

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/notification_category_label"
            style="@style/SettingsCategoryLabel"
            android:text="@string/settings_notification" />

        <RelativeLayout style="@style/SettingsRow">

            <com.delectable.mobile.ui.common.widget.FontTextView
                android:id="@+id/following_you"
                style="@style/SettingsRowTextLabel"
                android:text="@string/settings_following_you" />

            <!-- TODO change icon to phone icon style-->
            <ImageButton
                android:id="@+id/following_phone_notification"
                style="@style/SettingsPhoneNotificationIcon"
                android:layout_toLeftOf="@+id/following_email_notification" />

            <!-- TODO change icon to letter icon in style -->
            <ImageButton
                android:id="@+id/following_email_notification"
                style="@style/SettingsEmailNotificationIcon" />
        </RelativeLayout>

        <RelativeLayout style="@style/SettingsRow">

            <com.delectable.mobile.ui.common.widget.FontTextView
                android:id="@+id/comment_on_your_wine"
                style="@style/SettingsRowTextLabel"
                android:text="@string/settings_comment_on_your_wine" />

            <!-- TODO change icon to phone icon style-->
            <ImageButton
                android:id="@+id/comment_phone_notification"
                style="@style/SettingsPhoneNotificationIcon"
                android:layout_toLeftOf="@+id/comment_email_notification" />

            <!-- TODO change icon to letter icon in style -->
            <ImageButton
                android:id="@+id/comment_email_notification"
                style="@style/SettingsEmailNotificationIcon" />
        </RelativeLayout>

        <RelativeLayout style="@style/SettingsRow">

            <com.delectable.mobile.ui.common.widget.FontTextView
                android:id="@+id/tagged_on_a_wine"
                style="@style/SettingsRowTextLabel"
                android:text="@string/settings_tagged_on_a_wine" />

            <!-- TODO change icon to phone icon style-->
            <ImageButton
                android:id="@+id/tagged_phone_notification"
                style="@style/SettingsPhoneNotificationIcon"
                android:layout_toLeftOf="@+id/tagged_email_notification" />

            <!-- TODO change icon to letter icon in style -->
            <ImageButton
                android:id="@+id/tagged_email_notification"
                style="@style/SettingsEmailNotificationIcon" />
        </RelativeLayout>

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/about_category_label"
            style="@style/SettingsCategoryLabel"
            android:text="@string/settings_about" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/contact"
            style="@style/SettingsAboutCategoryRow"
            android:text="@string/settings_contact" />

        <View style="@style/SettingsAboutCategoryDivider" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/terms_of_use"
            style="@style/SettingsAboutCategoryRow"
            android:text="@string/settings_terms_of_use" />

        <View style="@style/SettingsAboutCategoryDivider" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/privacy_policy"
            style="@style/SettingsAboutCategoryRow"
            android:text="@string/settings_privacy_policy" />

        <View style="@style/SettingsAboutCategoryDivider" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/sign_out"
            style="@style/SettingsAboutCategoryRow"
            android:text="@string/settings_sign_out" />

        <View style="@style/SettingsAboutCategoryDivider" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/delectable_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_view_horizontal_padding"
            android:gravity="center"
            android:text="Delectable 1.01"
            android:textColor="@color/d_dark_gray"
            android:textSize="@dimen/settings_version_text_size"
            app:fontName="whitney_book" />

    </LinearLayout>
</ScrollView>