<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Comment And Rating -->

        <!-- TODO: Use Whitney Font -->
        <EditText
            android:id="@+id/comment_edit_text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/capture_submit_margins"
            android:layout_marginBottom="20dp"
            android:background="@android:color/white"
            android:gravity="top"
            android:hint="@string/capture_submit_leave_comment_hint"
            android:textColorHint="@color/d_medium_gray"
            android:textSize="@dimen/capture_submit_comment_text_size" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rate_seek_bar"
            android:layout_alignLeft="@id/rate_seek_bar"
            android:text="@string/dialog_rating_notforme"
            android:textColor="@color/d_medium_gray"
            android:textSize="@dimen/dialog_rating_end_text_size"
            app:fontName="whitney_medium" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rate_seek_bar"
            android:layout_alignRight="@id/rate_seek_bar"
            android:text="@string/dialog_rating_loveit"
            android:textColor="@color/d_medium_gray"
            android:textSize="@dimen/dialog_rating_end_text_size"
            app:fontName="whitney_medium" />

        <com.delectable.mobile.ui.common.widget.RatingSeekBar
            android:id="@+id/rate_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comment_edit_text"
            android:layout_marginLeft="@dimen/capture_submit_margins"
            android:layout_marginRight="@dimen/capture_submit_margins" />

        <!-- More options -->

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/drinking_with_who"
            style="@style/WineCaptureSubmitText"
            android:layout_below="@id/rate_seek_bar"
            android:layout_marginTop="10dp"
            android:text="@string/capture_submit_drinking_with_who_text" />

        <View
            android:id="@+id/vertical_divider2"
            style="@style/WineCaptureDividers"
            android:layout_below="@id/drinking_with_who" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/drinking_where"
            style="@style/WineCaptureSubmitText"
            android:layout_below="@+id/vertical_divider2"
            android:text="@string/capture_submit_drinking_where_text" />

        <View
            android:id="@+id/vertical_divider3"
            style="@style/WineCaptureDividers"
            android:layout_below="@id/drinking_where"
            android:layout_marginBottom="40dp" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/make_private"
            style="@style/WineCaptureSubmitText"
            android:layout_below="@id/vertical_divider3"
            android:text="@string/make_private" />

        <View
            android:id="@+id/vertical_divider4"
            style="@style/WineCaptureDividers"
            android:layout_below="@id/make_private" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/share_facebook"
            style="@style/WineCaptureSubmitText"
            android:layout_below="@id/vertical_divider4"
            android:text="@string/facebook_text" />

        <View
            android:id="@+id/vertical_divider5"
            style="@style/WineCaptureDividers"
            android:layout_below="@id/share_facebook" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/share_twitter"
            style="@style/WineCaptureSubmitText"
            android:layout_below="@id/vertical_divider5"
            android:text="@string/twitter_text" />

        <View
            android:id="@+id/vertical_divider6"
            style="@style/WineCaptureDividers"
            android:layout_below="@id/share_twitter" />

        <com.delectable.mobile.ui.common.widget.FontTextView
            android:id="@+id/share_instagram"
            style="@style/WineCaptureSubmitText"
            android:layout_below="@id/vertical_divider6"
            android:text="@string/instagram_text" />

        <View
            android:id="@+id/vertical_divider7"
            style="@style/WineCaptureDividers"
            android:layout_below="@id/share_instagram" />

    </RelativeLayout>

</ScrollView>