<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/d_white"
        android:divider="@null"
        android:listSelector="@color/transparent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/empty_view_facebook"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_large"
        android:gravity="center"
        android:orientation="vertical">

        <com.delectable.mobile.ui.common.widget.FontTextView
            style="@style/TextEmptyState"
            android:text="@string/empty_facebook"
            android:paddingBottom="@dimen/spacing_large" />

        <com.delectable.mobile.ui.common.widget.Delectabutton
            android:id="@+id/connect_facebook_button"
            style="@style/delectabutton_facebook"
            android:text="@string/connect_facebook_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty_view_twitter"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large"
        android:visibility="gone">

        <com.delectable.mobile.ui.common.widget.FontTextView
            style="@style/TextEmptyState"
            android:paddingBottom="@dimen/spacing_large"
            android:text="@string/empty_twitter" />

        <com.delectable.mobile.ui.common.widget.Delectabutton
            android:id="@+id/connect_twitter_button"
            style="@style/delectabutton_large"
            android:text="@string/connect_twitter_button"
            app:icon="@drawable/ic_find_twitter_pressed" />

    </LinearLayout>

</FrameLayout>
